# serializer version: 1
# name: test_deploy_multiple_services
  '''
  +-----------------------------------------------------+
  | key    | value                                      |
  |--------+--------------------------------------------|
  | status | Service TEST_SERVICE successfully created. |
  +-----------------------------------------------------+
  
  '''
# ---
# name: test_deploy_not_existing_entity_id
  '''
  Usage: default spcs service deploy [OPTIONS] [ENTITY_ID]
  Try 'default spcs service deploy --help' for help.
  +- Error ----------------------------------------------------------------------+
  | No 'not_existing_entity_id' entity in project definition file.               |
  +------------------------------------------------------------------------------+
  
  '''
# ---
# name: test_deploy_service
  '''
  +-----------------------------------------------------+
  | key    | value                                      |
  |--------+--------------------------------------------|
  | status | Service TEST_SERVICE successfully created. |
  +-----------------------------------------------------+
  
  '''
# ---
# name: test_deploy_service_already_exists
  '''
  +- Error ----------------------------------------------------------------------+
  | Service TEST_SERVICE already exists.                                         |
  +------------------------------------------------------------------------------+
  
  '''
# ---
# name: test_deploy_service_replace
  '''
  +-----------------------------------------------------+
  | key    | value                                      |
  |--------+--------------------------------------------|
  | status | Service TEST_SERVICE successfully created. |
  +-----------------------------------------------------+
  
  '''
# ---
# name: test_latest_metrics
  '''
  +------------------------------------------------------------------------------+
  | TIMESTA | DATABAS | SCHEMA  | SERVICE | INSTANC | CONTAIN | METRIC  | METRIC |
  | MP      | E NAME  | NAME    | NAME    | E ID    | ER NAME | NAME    | VALUE  |
  |---------+---------+---------+---------+---------+---------+---------+--------|
  | 2024-12 | N/A     | N/A     | LOG_EVE | N/A     | log-pri | contain | 0.0005 |
  | -10     |         |         | NT      |         | nter    | er.cpu. | 007168 |
  | 18:53:2 |         |         |         |         |         | usage   | 666666 |
  | 1.80900 |         |         |         |         |         |         | 691    |
  | 0       |         |         |         |         |         |         |        |
  +------------------------------------------------------------------------------+
  
  '''
# ---
